--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
+  "type": "module",
   "name": "tilt",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "lint": "eslint ."
   },
   "dependencies": {
     "hono": "^4.5.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "eslint": "9.x",
+    "globals": "^15.8.0",
+    "typescript-eslint": "^7.18.0"
   }
 }
