--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "hono": "^4.5.3"
+    "@hono/zod-validator": "^0.2.2",
+    "hono": "^4.5.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
